# NCERT-Study-Guide

./: .gitignore  README.md  main.py  pyproject.toml  query_rag.py  requirements.txt  setup_rag.py  streamlit_code.py  test_environment.py
Books/: text.txt
ncert_rag/: __init__.py  clean.py  cli.py  config.py  ingest.py  rag.py
vector_db/: chroma.sqlite3
